# keycloak-operator

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  .tally-config.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  REFACTOR_COMPLETE.md  RELEASES.md  RELEASE_WORKFLOW_ANALYSIS.md  Taskfile.yml  codecov.yml  docker-compose.yaml  documentation.TODO  index.html  integration_logs.txt  integration_logs_2.txt  job_logs.txt  mkdocs.yml  pyproject.toml  release-notes.md  sre-reviewer.todo  test-keycloak.yaml  test-leader-election.sh  test-operator.sh  ty.toml  versions.json
.github/: .release-please-manifest.json  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  copilot-instructions.md  dependabot.yml  release-please-config.json
0.2.15/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/: 404.html  index.html  sitemap.xml
0.3.1/: 404.html  index.html  sitemap.xml
0.3.11/: 404.html  index.html  sitemap.xml
0.3.12/: 404.html  index.html  objects.inv  sitemap.xml
0.3.13/: 404.html  index.html  objects.inv  sitemap.xml
0.3.14/: 404.html  index.html  sitemap.xml
0.3.15/: 404.html  index.html  objects.inv  sitemap.xml
0.3.16/: 404.html  index.html  sitemap.xml
0.3.17/: 404.html  index.html  objects.inv  sitemap.xml
0.3.18/: 404.html  index.html  objects.inv  sitemap.xml
0.3.19/: 404.html  index.html  objects.inv  sitemap.xml
0.3.2/: 404.html  index.html  sitemap.xml
0.3.21/: 404.html  index.html  sitemap.xml
0.3.22/: 404.html  index.html  sitemap.xml
0.3.23/: 404.html  index.html  sitemap.xml
0.3.24/: 404.html  index.html  sitemap.xml
0.3.25/: 404.html  index.html  objects.inv  sitemap.xml
0.3.26/: 404.html  index.html  sitemap.xml
0.3.27/: 404.html  index.html  sitemap.xml
0.3.28/: 404.html  index.html  sitemap.xml
0.3.29/: 404.html  index.html  sitemap.xml
0.3.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3.30/: 404.html  index.html  objects.inv  sitemap.xml
0.3.4/: 404.html  index.html  sitemap.xml
0.3.5/: 404.html  index.html  sitemap.xml
0.3.6/: 404.html  index.html  sitemap.xml
0.3.7/: 404.html  index.html  sitemap.xml
0.3.8/: 404.html  index.html  objects.inv  sitemap.xml
0.3.9/: 404.html  index.html  sitemap.xml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.1/: 404.html  index.html  sitemap.xml
0.4.10/: 404.html  index.html  sitemap.xml
0.4.11/: 404.html  index.html  objects.inv  sitemap.xml
0.4.12/: 404.html  index.html  sitemap.xml
0.4.13/: 404.html  index.html  sitemap.xml
0.4.14/: 404.html  index.html  sitemap.xml
0.4.15/: 404.html  index.html  sitemap.xml
0.4.16/: 404.html  index.html  sitemap.xml
0.4.17/: 404.html  index.html  sitemap.xml
0.4.18/: 404.html  index.html  sitemap.xml
0.4.19/: 404.html  index.html  objects.inv  sitemap.xml
0.4.2/: 404.html  index.html  sitemap.xml
0.4.21/: 404.html  index.html  sitemap.xml
0.4.22/: 404.html  index.html  sitemap.xml
0.4.23/: 404.html  index.html  sitemap.xml
0.4.24/: 404.html  index.html  objects.inv  sitemap.xml
0.4.25/: 404.html  index.html  sitemap.xml
0.4.26/: 404.html  index.html  sitemap.xml
0.4.27/: 404.html  index.html  sitemap.xml
0.4.28/: 404.html  index.html  objects.inv  sitemap.xml
0.4.29/: 404.html  index.html  sitemap.xml
0.4.3/: 404.html  index.html  sitemap.xml
0.4.30/: 404.html  index.html  sitemap.xml
0.4.31/: 404.html  index.html  sitemap.xml
0.4.32/: 404.html  index.html  sitemap.xml
0.4.34/: 404.html  index.html  objects.inv  sitemap.xml
0.4.35/: 404.html  index.html  sitemap.xml
0.4.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4.5/: 404.html  index.html  objects.inv  sitemap.xml
0.4.6/: 404.html  index.html  sitemap.xml
0.4.7/: 404.html  index.html  sitemap.xml
0.4.8/: 404.html  index.html  sitemap.xml
0.6.0/: 404.html  index.html  sitemap.xml
0.6.1/: 404.html  index.html  sitemap.xml
0.6.10/: 404.html  index.html  sitemap.xml
0.6.11/: 404.html  index.html  sitemap.xml
0.6.12/: 404.html  index.html  sitemap.xml
0.6.13/: 404.html  index.html  sitemap.xml
0.6.2/: 404.html  index.html  sitemap.xml
0.6.3/: 404.html  index.html  sitemap.xml
0.6.4/: 404.html  index.html  sitemap.xml
0.6.5/: 404.html  index.html  sitemap.xml
0.6.6/: 404.html  index.html  objects.inv  sitemap.xml
0.6.7/: 404.html  index.html  objects.inv  sitemap.xml
0.6.8/: 404.html  index.html  sitemap.xml
0.6.9/: 404.html  index.html  objects.inv  sitemap.xml
0.7.1/: 404.html  index.html  sitemap.xml
0.7.10/: 404.html  index.html  sitemap.xml
0.7.11/: 404.html  index.html  sitemap.xml
0.7.12/: 404.html  index.html  sitemap.xml
0.7.13/: 404.html  index.html  sitemap.xml
0.7.14/: 404.html  index.html  sitemap.xml
0.7.16/: 404.html  index.html  sitemap.xml
0.7.17/: 404.html  index.html  sitemap.xml
0.7.18/: 404.html  index.html  sitemap.xml
0.7.2/: 404.html  index.html  sitemap.xml
0.7.20/: 404.html  index.html  sitemap.xml
0.7.22/: 404.html  index.html  sitemap.xml
0.7.24/: 404.html  index.html  sitemap.xml
0.7.25/: 404.html  index.html  sitemap.xml
0.7.26/: 404.html  index.html  sitemap.xml
0.7.27/: 404.html  index.html  sitemap.xml
0.7.28/: 404.html  index.html  sitemap.xml
0.7.29/: 404.html  index.html  sitemap.xml
0.7.3/: 404.html  index.html  objects.inv  sitemap.xml
0.7.30/: 404.html  index.html  sitemap.xml
0.7.31/: 404.html  index.html  sitemap.xml
0.7.32/: 404.html  index.html  sitemap.xml
0.7.33/: 404.html  index.html  sitemap.xml
0.7.4/: 404.html  index.html  objects.inv  sitemap.xml
0.7.6/: 404.html  index.html  sitemap.xml
0.7.7/: 404.html  index.html  sitemap.xml
0.7.9/: 404.html  index.html  objects.inv  sitemap.xml
TODO/: CURRENT-STATUS.md  DEBUGGING-SESSION-SUCCESS.md  DOCUMENTATION-COMPLETE.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  PROGRESS-REPORT.md  README.md  SENIOR_SRE_REVIEW.md  SESSION-COMPLETE.md  UNIT-TESTS-COMPLETE.md  authorization-secret-implementation-plan.md  authorizationSecretRef-cleanup-phase2.md  camelCase.md  (+36 more)
(+9816 files in other folders)
